force-app/main/default/objects/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_INVENTOR_SHARE_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_INVENTOR_SHARE_VIEW</externalName>
    <label>Case Inventor Share</label>
    <pluralLabel>Case Inventor Shares</pluralLabel>
</CustomObject>