force-app/main/default/objects/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x/fields/ASSIGNED_TO__c.field-meta.xml
<CustomField>
    <fullName>ASSIGNED_TO__c</fullName>
    <description>ASSIGNED_TO</description>
    <externalDeveloperName>ASSIGNED_TO</externalDeveloperName>
    <label>Assigned To</label>
    <length>90</length>
    <type>Text</type>
</CustomField>