force-app/main/default/objects/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x/fields/CASE_INVENTOR_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_INVENTOR_RECID__c</fullName>
    <description>CASE_INVENTOR_RECID</description>
    <externalDeveloperName>CASE_INVENTOR_RECID</externalDeveloperName>
    <label>Case Inventor Recid</label>
    <length>12</length>
    <type>Text</type>
</CustomField>