force-app/main/default/objects/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x/fields/CASE_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_RECID__c</fullName>
    <description>CASE_RECID</description>
    <externalDeveloperName>CASE_RECID</externalDeveloperName>
    <label>Case Recid</label>
    <length>12</length>
    <referenceTo>Forrester_Case__x</referenceTo>
    <relationshipLabel>Inventors</relationshipLabel>
    <relationshipName>Case_Inventor_Share</relationshipName>
    <type>ExternalLookup</type>
</CustomField>