force-app/main/default/objects/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x/fields/INVENTOR_ASSOCIATION_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INVENTOR_ASSOCIATION_TYPE__c</fullName>
    <description>INVENTOR_ASSOCIATION_TYPE</description>
    <externalDeveloperName>INVENTOR_ASSOCIATION_TYPE</externalDeveloperName>
    <label>Inventor Association Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>