force-app/main/default/objects/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x/fields/INVENTOR_NAME__c.field-meta.xml
<CustomField>
    <fullName>INVENTOR_NAME__c</fullName>
    <description>INVENTOR_NAME</description>
    <externalDeveloperName>INVENTOR_NAME</externalDeveloperName>
    <label>Name</label>
    <length>84</length>
    <type>Text</type>
</CustomField>