force-app/main/default/objects/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x/fields/INVENTOR_RECID__c.field-meta.xml
<CustomField>
    <fullName>INVENTOR_RECID__c</fullName>
    <description>INVENTOR_RECID</description>
    <externalDeveloperName>INVENTOR_RECID</externalDeveloperName>
    <label>Inventor Recid</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>