force-app/main/default/objects/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x/fields/INVENTOR_TITLE__c.field-meta.xml
<CustomField>
    <fullName>INVENTOR_TITLE__c</fullName>
    <description>INVENTOR_TITLE</description>
    <externalDeveloperName>INVENTOR_TITLE</externalDeveloperName>
    <label>Title</label>
    <length>65</length>
    <type>Text</type>
</CustomField>