force-app/main/default/objects/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x/fields/IS_PRIMARY_PI__c.field-meta.xml
<CustomField>
    <fullName>IS_PRIMARY_PI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IS_PRIMARY_PI</description>
    <externalDeveloperName>IS_PRIMARY_PI</externalDeveloperName>
    <label>Primary Inventor</label>
    <type>Checkbox</type>
</CustomField>