force-app/main/default/objects/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x/fields/PREFERRED_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>PREFERRED_EMAIL__c</fullName>
    <description>PREFERRED_EMAIL</description>
    <externalDeveloperName>PREFERRED_EMAIL</externalDeveloperName>
    <label>Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>