force-app/main/default/objects/Forrester_SHIR_CASE_INVENTOR_SHARE_VI__x/fields/ROYALTY_PCT__c.field-meta.xml
<CustomField>
    <fullName>ROYALTY_PCT__c</fullName>
    <description>ROYALTY_PCT</description>
    <externalDeveloperName>ROYALTY_PCT</externalDeveloperName>
    <label>Royalty %</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>